lots of linting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-  "editor.formatOnSave": true,
-  "omnisharp.organizeImportsOnFormat": true,
+	"editor.formatOnSave": true,
+	"omnisharp.organizeImportsOnFormat": true,
+	"omnisharp.enableRoslynAnalyzers": true,
+	"omnisharp.enableEditorConfigSupport": true
 }
