--- a/monogame-demo.csproj
+++ b/monogame-demo.csproj
@@ -23,12 +23,11 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Arch" Version="1.2.5.2-alpha" />
+    <PackageReference Include="Arch" Version="1.2.5" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
     <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.8.0" />
-    <PackageReference Include="MonoGame.Extended.Entities" Version="3.8.0" />
     <PackageReference Include="MonoGame.Extended.Input" Version="3.8.0" />
     <PackageReference Include="MonoGame.Extended.Tweening" Version="3.8.0" />
   </ItemGroup>
