--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
+	"[csharp]": {
+		"editor.defaultFormatter": "csharpier.csharpier-vscode",
+	},
 	"editor.formatOnSave": true,
 	"omnisharp.organizeImportsOnFormat": true,
 	"omnisharp.enableRoslynAnalyzers": true,
-	"omnisharp.enableEditorConfigSupport": true
+	"omnisharp.enableEditorConfigSupport": false
 }
