--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
 	"[csharp]": {
-		"editor.defaultFormatter": "csharpier.csharpier-vscode",
+		"editor.defaultFormatter": "csharpier.csharpier-vscode"
 	},
 	"editor.formatOnSave": true,
+	"omnisharp.autoStart": true,
 	"omnisharp.organizeImportsOnFormat": true,
 	"omnisharp.enableRoslynAnalyzers": true,
 	"omnisharp.enableEditorConfigSupport": false
