--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,3 +36,15 @@ jobs:
       run: dotnet publish ${{ env.PROJECT_PATH }} -r osx-x64 -c Release --self-contained --output artifacts/osx
     - name: Build Linux
       run: dotnet publish ${{ env.PROJECT_PATH }} -r linux-x64 -c Release --self-contained --output artifacts/linux
+    - name: Zip
+      run: |
+        zip -r artifacts/windows.zip artifacts/windows
+        zip -r artifacts/osx.zip artifacts/osx
+        zip -r artifacts/linux.zip artifacts/linux
+    - name: Release with Notes
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          artifacts/windows.zip
+          artifacts/osx.zip
+          artifacts/linux.zip
