--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,3 +48,5 @@ jobs:
           artifacts/windows.zip
           artifacts/osx.zip
           artifacts/linux.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
