flash system changes and input updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
 	"omnisharp.autoStart": true,
 	"omnisharp.organizeImportsOnFormat": true,
 	"omnisharp.enableRoslynAnalyzers": true,
-	"omnisharp.enableEditorConfigSupport": false
+	"omnisharp.enableEditorConfigSupport": false,
+	"dotnet.defaultSolution": "monogame-demo.sln"
 }
