ignore .mono directory

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,5 @@ FodyWeavers.xsd
 #!! ERROR: monogame is undefined. Use list command to see defined gitignore types !!#
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,monogame
+
+.mono/
